--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,31 +7,30 @@
     <link rel="stylesheet" href="/style/landing-page-style.css">
     <title>Underground Maze</title>
 </head>
-
 <body>
-    
     <section>
         <h2 id="text">Underground<br><br>Maze</h2>
         <img src="assets/landing-page-img/bird1.png" id="bird1">
         <img src="assets/landing-page-img/bird2.png" id="bird2">
         <img src="assets/landing-page-img/forest.png" id="forest">
         <a href="#sec" id="btn">Quick Start<sub id="enter">or Press Enter To Start</sub></a>
-        </a>
         <img src="assets/landing-page-img/rocks.png" id="rocks">
         <img src="assets/landing-page-img/grass1.png" id="water1">
         <img src="assets/landing-page-img/grass2.png" id="water2" >
     </section>
 
-    <div class="sec" id="sec">
-        <h2 id="welcome">Welcome to the Game</h2>
-        <script type="module" src="script/game.js"></script>
+<div class="welcome">        
+    <h2>Welcome to the Game</h2>
+        <div class="story">
+            Nabiha, a top-tier software engineer has suddenly disappeared.
+            A clue was left behind, lead to an underground maze, where she has been kidnapped.
+            It was a problem solver’s queue to start his journey through a series of challenges.
+            His mission is to navigate through these paths while collecting coins 
+            to reach her and be there for the ultimate rescue.</div>
+    </div>
 
-    </div> 
-
-    <script src="script/landing-page-script.js"></script>
-
-
-
+<script src="script/landing-page-script.js"></script>
+<script type="module" src="script/game.js"></script>
+<footer class="footer"><span>This game was made by:</span><span>ahmad eid</span><span>ZaynabNour El Ghosh</span><span>Hasan Mousa</span><span>Husein Zreik</span><span>Hilal Bodon</span></footer>
 </body>
-
 </html>
