adding more to footer

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img src="assets/landing-page-img/bird1.png" id="bird1">
         <img src="assets/landing-page-img/bird2.png" id="bird2">
         <img src="assets/landing-page-img/forest.png" id="forest">
-        <a href="#sec" id="btn">Quick Start<sub id="enter">or Press Enter To Start</sub></a>
+        <a href="#game" id="btn">Quick Start<sub id="enter">or Press Enter To Start</sub></a>
         <img src="assets/landing-page-img/rocks.png" id="rocks">
         <img src="assets/landing-page-img/grass1.png" id="water1">
         <img src="assets/landing-page-img/grass2.png" id="water2" >
@@ -29,8 +29,30 @@
             to reach her and be there for the ultimate rescue.</div>
     </div>
 
-<script src="script/landing-page-script.js"></script>
-<script type="module" src="script/game.js"></script>
-<footer class="footer"><span>This game was made by:</span><span>ahmad eid</span><span>ZaynabNour El Ghosh</span><span>Hasan Mousa</span><span>Husein Zreik</span><span>Hilal Bodon</span></footer>
+    <div id="game">
+        <script type="module" src="script/game.js" ></script>
+    </div>
+
+    
+    <footer id="footer">
+        <div class="footer-content">
+            <h3>Developers:</h3>
+            <span>Husein Zreik (Team leader)</span>
+            <span>Ahmad eid</span>
+            <span>ZaynabNour El Ghosh</span>
+            <span>Hasan Mousa</span>
+            <span>Hilal Bodon</span> 
+            <br>
+        </div>
+        <div class="footer-bottom">
+            <p>@copyright &copy; <a href="#">SE FACTORY Students</a>  </p>
+                    </div>
+        </div>
+    </footer>
+
+
+
+    <script src="script/landing-page-script.js"></script>
+
 </body>
 </html>
