--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="assets/gold.png">
     <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
     <link rel="stylesheet" href="/style/landing-page-style.css">
     <title>Underground Maze</title>
 </head>
+
 <body>
     <section>
         <h2 id="text">Underground<br><br>Maze</h2>
@@ -16,21 +19,33 @@
         <a href="#sec" id="btn">Quick Start<sub id="enter">or Press Enter To Start</sub></a>
         <img src="assets/landing-page-img/rocks.png" id="rocks">
         <img src="assets/landing-page-img/grass1.png" id="water1">
-        <img src="assets/landing-page-img/grass2.png" id="water2" >
+        <img src="assets/landing-page-img/grass2.png" id="water2">
     </section>
 
-<div class="welcome">        
-    <h2>Welcome to the Game</h2>
+    <div class="welcome">
+        <h2>Welcome to the Game</h2>
         <div class="story">
             Nabiha, a top-tier software engineer has suddenly disappeared.
             A clue was left behind, lead to an underground maze, where she has been kidnapped.
             It was a problem solver’s queue to start his journey through a series of challenges.
-            His mission is to navigate through these paths while collecting coins 
+            His mission is to navigate through these paths while collecting coins
             to reach her and be there for the ultimate rescue.</div>
     </div>
 
-<script src="script/landing-page-script.js"></script>
-<script type="module" src="script/game.js"></script>
-<footer class="footer"><span>This game was made by:</span><span>ahmad eid</span><span>ZaynabNour El Ghosh</span><span>Hasan Mousa</span><span>Husein Zreik</span><span>Hilal Bodon</span></footer>
+    <script src="script/landing-page-script.js"></script>
+    <script type="module" src="script/game.js"></script>
+    <footer class="footer">
+
+        <span>MADE BY :</span>
+
+        <span>Husein Zreik</span>
+        <span>Hassan Moussa</span>
+        <span>Ahmad Eid</span>
+
+        <span>ZaynabNour El Ghosh</span>
+        <span>Hilal Bodon</span>
+
+    </footer>
 </body>
+
 </html>
