fixing the scroll

--- a/index.html
+++ b/index.html
@@ -29,12 +29,15 @@
             A clue was left behind, lead to an underground maze, where she has been kidnapped.
             It was a problem solver’s queue to start his journey through a series of challenges.
             His mission is to navigate through these paths while collecting coins
-            to reach her and be there for the ultimate rescue.</div>
+            to reach her and be there for the ultimate rescue.
+        </div>
+        <div id="sec">
+            <script type="module" src="script/game.js"></script>
+        </div>
     </div>
 
-    <script src="script/landing-page-script.js"></script>
-    <script type="module" src="script/game.js"></script>
-    <footer class="footer">
+
+    <footer class="footer" id="footer">
 
         <span>MADE BY :</span>
 
@@ -46,6 +49,7 @@
         <span>Hilal Bodon</span>
 
     </footer>
+    <script src="script/landing-page-script.js"></script>
 </body>
 
 </html>
